# YukiFrame

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  DEBUG_QUICK_REFERENCE.md  DEVELOPMENT.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.txt  LICENSE  Makefile  PROJECT_NOTES.txt  QUICK_FIX.md  QUICK_START.md  README.md  TESTING.md  TOOL_DEVELOPMENT.md  UPDATES_SUMMARY.md  WINDOWS_BUILD_FIX.md  build.bat  build.sh  run-tests.bat  run-tests.sh  run.bat  setup.bat  test-integration.py  test-manual.bat  test-standalone.bat  test-tools.conf  yuki-control.bat  yuki-control.sh  yuki-frame.conf.example
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTROL_API.md  DEVELOPMENT.md  TESTING.md  TOOL_DEVELOPMENT.md
examples/: README.md
include/: config.h  event.h  framework.h  logger.h  platform.h  tool.h
include/yuki_frame/: config.h  console.h  control.h  control_api.h  control_socket.h  debug.h  event.h  framework.h  logger.h  platform.h  tool.h  tool_queue.h
src/core/: cli_control.c  config.c  console.c  control.c  control_api.c  control_socket.c  debug.c  event.c  logger.c  main.c  platform_linux.c  platform_windows.c  tool.c  tool_queue.c
src/platform/: platform_linux.c  platform_windows.c
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_integration.py
tests/unit/: CMakeLists.txt  test_config.c  test_event.c  test_tool.c
tools/: README.md  alerter.py  echo.py  monitor.py  receiver.py  sender.py  yuki-console.py
